[package]
name = "wgpu_foo"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "22", features = ["webgl"], git = "https://github.com/gfx-rs/wgpu" }
winit = { version = "0.29", features = ["rwh_06"] }
console_log = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'DomTokenList',
  'Headers',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Window',
]

[workspace]
members = [
    "run-wasm",
]
